fix: page-content p should not use text-align: justify
Fixes #4908

--- a/plugins/plugin-client-common/web/css/static/ui.css
+++ b/plugins/plugin-client-common/web/css/static/ui.css
@@ -779,7 +779,6 @@ body.oops-total-catastrophe #restart-needed-warning {
   font-size: 1em;
   font-weight: 400;
   line-height: 1.25em;
-  text-align: justify;
 }
 .page-content code {
   font-family: var(--font-monospace);
